# BangerBot

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
bangerbot/: main.py  utils.py
bbot/: main.py  utils.py
