[tool.poetry]
name = "bangerbot"
version = "0.1.3"
description = "Get those bangers banging 🔥"
authors = ["Simon Alibert <alibert.sim@gmail.com>"]
repository = "https://github.com/aliberts/BangerBot"
license = "MIT"
readme = "README.md"
packages = [{include = "bangerbot"}]
keywords = ["music", "dj", "poetry"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio",
    "Development Status :: 4 - Beta",
]

[tool.poetry.scripts]
banger = "bangerbot.main:bangerbot"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.1"
click = "^8.1.7"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
